add styled-components to dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^1.11.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "styled-components": "^1.4.6",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2"
   }
